--- a/rebar.config
+++ b/rebar.config
@@ -21,12 +21,8 @@
 %%%----------------------------------------------------------------------
 
 {erl_opts, [debug_info, {src_dirs, ["src"]}]}.
-{port_env, [{"CFLAGS", "$CFLAGS"}, {"LDFLAGS", "$LDFLAGS"}]}.
-{port_specs, [{"priv/lib/fast_yaml.so", ["c_src/fast_yaml.c"]}]}.
 
-{deps, [{p1_utils, ".*", {git, "git://github.com/processone/p1_utils", {tag, "1.0.3"}}}]}.
-
-{clean_files, ["c_src/fast_yaml.gcda", "c_src/fast_yaml.gcno"]}.
+{deps, [{p1_utils, "1.0.4"}]}.
 
 {cover_enabled, true}.
 {cover_export_enabled, true}.
@@ -34,3 +30,12 @@
 {xref_checks, [undefined_function_calls, undefined_functions, deprecated_function_calls, deprecated_functions]}.
 
 {profiles, [{test, [{erl_opts, [{src_dirs, ["src", "test"]}]}]}]}.
+
+{pre_hooks,
+  [{"(linux|darwin|solaris)", compile, "make -C c_src"},
+  {"(freebsd)", compile, "gmake -C c_src"}
+]}.
+{post_hooks,
+  [{"(linux|darwin|solaris)", clean, "make -C c_src clean"},
+   {"(freebsd)", clean, "gmake -C c_src clean"}
+]}.
