--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,11 @@ c_src/*.o
 c_src/*.d
 c_src/*.gcda
 c_src/*.gcno
-config.log
-config.status
 ebin
 priv/
 .eunit
 _build
-vars.config
-rebar
+rebar.lock
 deps/
 autom4te.cache/
 
